Final edits/commits. Abs limit 150 words.

--- a/text/abstract.tex
+++ b/text/abstract.tex
@@ -1,16 +1,21 @@
-Some of the largest supercomputing centers in the United States are developing 
-new relationships with their electricity service providers. 
-These relationships, similar to other commercial and industrial partnerships, are 
-driven by mutual interest to reduce energy costs and improve electrical grid reliability.
-While supercomputing centers are concerned about electricity quality, environmental 
-impact and availability, electricity service providers are concerned about impacts
-on electrical grid reliability, particularly in terms of energy consumption, peak power and power fluctuations.
-Supercomputing centers' power demand can be 20 MW or more---the 
-theoretical peak power requirements are greater than 45 MW---and recurring 
-intra-hour variability can exceed 8 MW.
-This paper evaluates today`s relationships, potential partnerships and possible 
-integration between supercomputing centers and their electricity service providers.
-The paper uses feedback from a questionnaire submitted to supercomputing centers 
-on the Top100 List in the United States to describe opportunities for overcoming the 
-challenges to HPC-Grid integration.
+Some of the largest Supercomputing Centers (SCs) in the United States are developing new relationships with their Electricity Service Providers (ESPs). These relationships, similar to other commercial and industrial partnerships, are driven by mutual interest to reduce energy costs and improve electrical grid reliability. While SCs are concerned about electricity quality, cost, environmental impact and availability, ESPs are concerned about electrical grid reliability, particularly in terms of energy consumption, peak power and power fluctuations. The power demand for SCs can be 20 MW or more---the theoretical peak power requirements are greater than 45 MW---and recurring intra-hour variability can exceed 8 MW.
 
+This paper evaluates today`s relationships, potential partnerships and possible integration between SCs and their ESPs. The paper uses feedback from a questionnaire submitted to supercomputer centers on the Top100 List in the United States to describe opportunities for overcoming the challenges to HPC-Grid integration.
+
+
+%Some of the largest Supercomputing Centers (SCs) in the United States are developing 
+%new relationships with their Electricity Service Providers (ESPs). 
+%These relationships, similar to other commercial and industrial partnerships, are 
+%driven by mutual interest to reduce energy costs and improve electrical grid reliability.
+%While SCs are concerned about electricity quality, cost, environmental impact and availability, ESPs are concerned about electrical grid reliability, particularly in terms of energy consumption, peak power and power fluctuations. The power demand for SCs can be 20 MW or more---the theoretical peak power requirements are greater than 45 MW---and recurring intra-hour variability can exceed 8 MW. As a result of this, ESPs may request large SCs to engage in demand response and grid integration. 
+%
+%This paper evaluates today`s relationships, potential partnerships and possible 
+%integration between SCs and their ESPs. The paper uses feedback from a questionnaire submitted to SCs on the Top100 List in the United States. We observe that only 20\% of SCs currently communicate with their respective ESPs, and that a stronger relationship between these entities can lead to potential energy and cost savings.
+%
+%
+%% We also observe that the preferred solutions for SCs to respond to ESP requests include coarse-grained power management techniques, job
+%%scheduling techniques, and shutting down of unused computing resources. \pagebreak
+%
+%
+%
+%%to describe opportunities for overcoming the challenges to HPC-Grid integration. 
