Added add'l author

--- a/text/whitepaper.tex
+++ b/text/whitepaper.tex
@@ -39,6 +39,7 @@ Anna Maria Bailey, LLNL\\
 Bob Conroy, OSIsoft\\
 Ayse K. Coskun, Boston University\\
 Thomas E. Durbin, NCSA\\
+Ted Kubaska, IEEE\\
 Jim Rogers, ORNL\\
 Darren Smith, NOAA
 }
