--- a/text/supercomputercenters.tex
+++ b/text/supercomputercenters.tex
@@ -3,7 +3,7 @@ became the fastest computer in the Top 500~\cite{Top500}, displacing the NEC Ear
 the previous champion. This change marked the transition from supercomputing gains based
 on ever-higher-performance components to systems that comprised of far larger numbers of 
 slow but energy-efficient components. However, total system power consumption continued to rise,
-and we are now poised to begin a second transition to ''power-limited computing'' and ''power-aware computing''. The new
+and we are now poised to begin a second transition to ``power-limited computing'' and ``power-aware computing''. The new
 model has been exemplified by the US Department of Energy issuing guidance that the first
 DOE exascale machine should not exceed 20 MW; effectively a $1000x$ performance improvement
 with only a $3x$ increase in power. 
@@ -49,7 +49,7 @@ SC system power management has a very broad range of implementations and warrant
 
 \begin{itemize}
 \item \textbf{Node level:} Controlling power ultimately requires control of individual
-components. Historically, this control has been accomplished through Dynamic Voltage/Frequency Scaling (DVFS), which allows the processor to use a lower voltage at the cost of a slower clock frequency. Newer technologies such as Intel's Running Average Power Limit leverage DVFS to guarantee that a user-specified processor power bound will, on average, not be exceeded over the duration of a short time window. DVFS can also be found on accelerator components such as NVIDIA's Kepler GPGPU. Other efforts reduce DRAM power by optimizing reads and writes, thus allowing the memory to spend more time in a lower-power state. Several processor configuration options have indirect but significant effects on power consumption. For example, the choice of the number of cores to use, whether or not to enable hyperthreading, and the use of "turbo" modes will change the power/performance curve.
+components. Historically, this control has been accomplished through Dynamic Voltage/Frequency Scaling (DVFS), which allows the processor to use a lower voltage at the cost of a slower clock frequency. Newer technologies such as Intel's Running Average Power Limit leverage DVFS to guarantee that a user-specified processor power bound will, on average, not be exceeded over the duration of a short time window. DVFS can also be found on accelerator components such as NVIDIA's Kepler GPGPU. Other efforts reduce DRAM power by optimizing reads and writes, thus allowing the memory to spend more time in a lower-power state. Several processor configuration options have indirect but significant effects on power consumption. For example, the choice of the number of cores to use, whether or not to enable hyperthreading, and the use of ``turbo'' modes will change the power/performance curve.
 
 \item \textbf{Job level:} Each of the node-level controls requires a tradeoff between
 power and performance. SC resources are typically oversubscribed, so degrading performance
@@ -82,7 +82,7 @@ priorities of jobs in the queue, the best solution in terms of throughput may be
 the recently-freed nodes and redistribute the freed power to running jobs.
 
 \item \textbf{Site level:} At the level of the machine room (or multiple machine rooms),
-decisions must be made as to how much power should be allocated for cooling versus computation, which requires understanding how temperature interacts with performance. A higher intake air temperature uses less cooling power but results in higher static processor power and may limit opportunities for "turbo" mode in processors where it is available. As cooling power varies with outside air temperature, a single machine room temperature setpoint may not be the optimal solution in terms of overall performance. 
+decisions must be made as to how much power should be allocated for cooling versus computation, which requires understanding how temperature interacts with performance. A higher intake air temperature uses less cooling power but results in higher static processor power and may limit opportunities for ``turbo'' mode in processors where it is available. As cooling power varies with outside air temperature, a single machine room temperature setpoint may not be the optimal solution in terms of overall performance. 
 \end{itemize}
 
 
