Added a paragraph on accounting data on power usage at the end of conclusion section. :

--- a/text/priorwork.tex
+++ b/text/priorwork.tex
@@ -5,7 +5,7 @@ we provide an overview of prior work in these areas.
 Processor power management can be divided into two distinct eras. First, with 
 the introduction of Dynamic Voltage Frequency Scaling, users were able to 
 change the CPU clock speed of their processors, lowering both voltage and,
-in most cases, energy: the program used less power and ran longer, but the
+in most cases, energy: the workload used less power and ran longer, but the
 quadratic relation of power to frequency biased the results towards overall
 energy savings. Early work included several modeling efforts focused on
 the effects of CPU- and memory-boundedness on delay and energy in MPI programs~\cite{SpringerPPoPP2006,GeICPP2007,LiHPCA2006,CameronSC2005,HsuSC2005}. 
@@ -131,7 +131,7 @@ Sun Grid Engine, PBS, OpenPBS, Torque, SLURM, Maui, and Moab support advance
 reservation capabilities. \\
 
 \subsubsection{Load Migration}
-Chiu et. al \cite{chiu_electric_2012} discussed a electrical grid balancing
+Chiu et. al \cite{chiu_electric_2012} discussed an electrical grid balancing
 problem that was experienced in the Pacific Northwest. In order to match
 electricity supply and balance the electrical grid, they proposed low-cost
 geographic load migration. They also suggested that a symbiotic relationship
