--- a/text/whitepaper.tex
+++ b/text/whitepaper.tex
@@ -20,7 +20,7 @@ An Investigative Analysis of Emerging Opportunities and Challenges
 \numberofauthors{16}
 \author{Natalie Bates$^1$, Girish Ghatikar$^2$,
   Ghaleb Abdulla$^3$, Gregory A. Koenig$^4$, Sridutt Bhalachandra$^5$, \\
-	Mehdi Sheikhalishashi$^6$, Tapasya Patki$^7$, Barry Rountree$^3$, Stephen Poole$^4$
+	Mehdi Sheikhalishahi$^6$, Tapasya Patki$^7$, Barry Rountree$^3$, Stephen Poole$^4$
 	\\ \\
 	$^1$Energy Efficient HPC Working Group\\
        $^2$Lawrence Berkeley National Laboratory\\
@@ -39,6 +39,7 @@ Anna Maria Bailey, LLNL\\
 Bob Conroy, OSIsoft\\
 Ayse K. Coskun, Boston University\\
 Thomas E. Durbin, NCSA\\
+Lucio Grandinetti, UNICAL\\
 Ted Kubaska, IEEE\\
 Jim Rogers, ORNL\\
 Darren Smith, NOAA
