--- a/text/conclusion.tex
+++ b/text/conclusion.tex
@@ -51,5 +51,15 @@ challenging with respect to grid integration.
 With increasing variable renewable generation and price-based DR programs, the intra-hour fluctuations 
 and demand forecasting are becoming increasingly important.
 Electrical grid programs may react in different ways to the timescale of a SC's load response. The trends in intra-hour fluctuation patterns need to be studied and analyzed further.
+
+%Mehdi
+In addition, we need to understand communication components to be exchanged between SCs and ESPs. For instance, as part of this communication SCs may provide accounting data on their power usage; ESPs can use this data to forecast and model future energy usage of SCs for providing better power quality and power provisioning purposes.
+
+%System architecture for this integration
+
+%- If/how electricity grid providers can use energy and usage accounting data to plan electricity provisioning of an HPC center?
+%- user-specific accounting data versus workload-specific accounting data.
+%- accounting data in terms of HPC center components, cooling, systems, lighting, etc.
+
 %What are the trends 
 %in inter-hour fluctuation patterns? Is this a new behavior, an interim one, or one that is %likely to get worse?
