Updated Future Work
I want to make sure we are actually planning on doing whatever is included in this last section. I don't want to over-commit.

--- a/text/conclusion.tex
+++ b/text/conclusion.tex
@@ -41,19 +41,16 @@ We are planning to pursue several areas in our future work.
 We are planning a similar survey for Europe to explore if there is a more compelling business case 
 in other geographies.
 We expect the business value of such grid integration to be enhanced where the price of 
-electricity is expensive, varies dynamically, or where there is strong reliance on expensive back-up 
-generation (for example, India).  
+electricity is expensive, or where the supply is constrained or varies dynamically.  
 
-We plan on following-up with the ESPs that support these US-based SCs. We note that this work's focus was from the perspective of the SC, and 
+We plan on following-up with the ESPs that support these US-based SCs. We note that this work's 
+focus was from the perspective of the SC, and 
 we are interested in hearing from the ESPs about what makes a customer more or less interesting or 
 challenging with respect to grid integration.
 
-With increasing variable renewable generation and price-based DR programs, the intra-hour fluctuations 
-and demand forecasting are becoming increasingly important.
-Electrical grid programs may react in different ways to the timescale of a SC's load response. The trends in intra-hour fluctuation patterns need to be studied and analyzed further.
-
 %Mehdi
-In addition, we need to understand communication components to be exchanged between SCs and ESPs. For instance, as part of this communication SCs may provide accounting data on their power usage; ESPs can use this data to forecast and model future energy usage of SCs for providing better power quality and power provisioning purposes.
+Finally, we want to better understand the specific information that could be exchanged between SCs and ESPs. 
+
 
 %System architecture for this integration
 
