--- a/text/whitepaper.tex
+++ b/text/whitepaper.tex
@@ -14,8 +14,10 @@
 
 \title{
 The Electrical Grid and Supercomputing Centers:\\
-An Investigative Analysis of Emerging Opportunities and Challenges
+An Investigative Analysis of Emerging Opportunities and Challenges\thanks{This work was partially performed under the auspices of the U.S. Department of Energy by Lawrence Livermore National Laboratory under Contract DE-AC52-07NA27344 as well as the U.S. Department of Energy’s Office of Energy Efficiency and Renewable Energy (EERE) by Lawrence Berkeley National Laboratory under Contract No. DE-AC02-05CH11231.}
 }
+
+
 
 \numberofauthors{16}
 \author{Natalie Bates$^1$, Girish Ghatikar$^2$,
