--- a/text/whitepaper.tex
+++ b/text/whitepaper.tex
@@ -14,43 +14,41 @@
 
 \title{
 The Electrical Grid and Supercomputing Centers:\\
-An Investigative Analysis of Emerging Opportunities and Challenges\thanks{This work was partially performed under the auspices of the U.S. Department of Energy by Lawrence Livermore National Laboratory under Contract DE-AC52-07NA27344 as well as the U.S. Department of Energy’s Office of Energy Efficiency and Renewable Energy (EERE) by Lawrence Berkeley National Laboratory under Contract No. DE-AC02-05CH11231.}
+An Investigative Analysis of Emerging Opportunities and Challenges\thanks{This work was partially performed under the auspices of the U.S. Department of Energy by Lawrence Livermore National Laboratory under Contract DE-AC52-07NA27344 as well as the U.S. Department of Energy's Office of Energy Efficiency and Renewable Energy (EERE) by Lawrence Berkeley National Laboratory under Contract No. DE-AC02-05CH11231.}
 }
 
-
-
-\numberofauthors{16}
-\author{Natalie Bates$^1$, Girish Ghatikar$^2$,
-  Ghaleb Abdulla$^3$, Gregory A. Koenig$^4$, Sridutt Bhalachandra$^5$, \\
-	Mehdi Sheikhalishahi$^6$, Tapasya Patki$^7$, Barry Rountree$^3$, Stephen Poole$^4$
-	\\ \\
-	$^1$Energy Efficient HPC Working Group\\
-       $^2$Lawrence Berkeley National Laboratory\\
-       $^3$Lawrence Livermore National Laboratory\\
-			 $^4$Oak Ridge National Laboratory\\
-			 $^5$University of North Carolina\\
-			$^6$University of Calabria\\
-			$^7$University of Arizona
-	}
-
-\additionalauthors {
-\label{sec:additional}
- \noindent
-Lou Ahlen, Purdue University \\
-Anna Maria Bailey, LLNL\\
-Susan Coghlan, Argonne NL\\
-Bob Conroy, OSIsoft\\
-Ayse K. Coskun, Boston University\\
-Thomas E. Durbin, NCSA\\
-Lucio Grandinetti, UNICAL\\
-Ted Kubaska, IEEE\\
-Jim Rogers, ORNL\\
-Dale Sartor, LBNL\\
-Darren Smith, NOAA
-}
+%
+%\numberofauthors{16}
+%\author{Natalie Bates$^1$, Girish Ghatikar$^2$,
+  %Ghaleb Abdulla$^3$, Gregory A. Koenig$^4$, Sridutt Bhalachandra$^5$, \\
+	%Mehdi Sheikhalishahi$^6$, Tapasya Patki$^7$, Barry Rountree$^3$, Stephen Poole$^4$
+	%\\ \\
+	%$^1$Energy Efficient HPC Working Group\\
+       %$^2$Lawrence Berkeley National Laboratory\\
+       %$^3$Lawrence Livermore National Laboratory\\
+			 %$^4$Oak Ridge National Laboratory\\
+			 %$^5$University of North Carolina\\
+			%$^6$University of Calabria\\
+			%$^7$University of Arizona
+	%}
+%
+%\additionalauthors {
+%\label{sec:additional}
+ %\noindent
+%Lou Ahlen, Purdue University \\
+%Anna Maria Bailey, LLNL\\
+%Susan Coghlan, Argonne NL\\
+%Bob Conroy, OSIsoft\\
+%Ayse K. Coskun, Boston University\\
+%Thomas E. Durbin, NCSA\\
+%Lucio Grandinetti, UNICAL\\
+%Ted Kubaska, IEEE\\
+%Jim Rogers, ORNL\\
+%Dale Sartor, LBNL\\
+%Darren Smith, NOAA
+%}
 
 \maketitle              % typeset the title of the contribution
-
 \input{abstract}
 %\category{C.4}{Performance of Systems}{Measurement Techniques}[power, energy]
 
