--- a/text/intro.tex
+++ b/text/intro.tex
@@ -98,4 +98,5 @@ reviews prior work in SC strategies. %TP: HPC replaced with supercomputing
 Section~\ref{sec:questionnaire} provides the results of the questionnaire. 
 Section~\ref{sec:opportunities} 
 discusses the several opportunities, solutions and barriers that have been highlighted
-by the survey results. We offer our conclusions in Section~\ref{sec:conclusion} along with our plan for future work. Additional authors are listed in Section~\ref{sec:additional} and the \nameref{Appendix} summarizes the survey questions.
+by the survey results. We offer our conclusions in Section~\ref{sec:conclusion} along with our plan for future work. %Additional authors are listed in Section~\ref{sec:additional} and the
+Section \nameref{Appendix} summarizes the survey questions.
