--- a/text/whitepaper.tex
+++ b/text/whitepaper.tex
@@ -85,7 +85,7 @@ An Investigative Analysis of Emerging Opportunities and Challenges\thanks{This w
 %
 % ---- Bibliography ----
 %
-\bibliographystyle{IEEETran}
+\bibliographystyle{plain}
 \bibliography{../bib/whitepaper,../bib/patki}  % eehpcmethod.bib is the name of the Bibliography in this case
 %
 
