First set of edits

--- a/text/intro.tex
+++ b/text/intro.tex
@@ -21,14 +21,15 @@ Being a ``good citizen'' on the electrical grid has several historical precedent
 In the past, electrically-intensive industries such as aluminum smelters 
 have received preferential pricing in return for predictable loads and
 flexibility in reducing power during periods of high consumption.
-SCs are already adopting these strategies. 
-For example, Lawrence Livermore National Laboratory (LLNL)
-reduces its power usage when temperatures exceed 
-100 degrees F and the residential power usage in the area surges.
-Other %centers TP: replace centers with SCs
-SCs are exploring the benefits of predicting hour-ahead and 
-day-ahead use in concert with their %providers TP: replace providers with ESPs
-ESPs.
+%TP: Accommodating reviewer feedback from SC14 and deleting the following. 7/14/14
+%SCs are already adopting these strategies. 
+%For example, Lawrence Livermore National Laboratory (LLNL)
+%reduces its power usage when temperatures exceed 
+%100 degrees F and the residential power usage in the area surges.
+%Other %centers TP: replace centers with SCs
+%SCs are exploring the benefits of predicting hour-ahead and 
+%day-ahead use in concert with their %providers TP: replace providers with ESPs
+%ESPs.
 A mutual understanding of concerns between SCs and ESPs can 
 produce a symbiotic relationship that goes beyond the current producer-consumer 
 paradigm, paving the way for possible integration of %HPC TP: replace HPC with SCs
@@ -80,12 +81,13 @@ the process of engaging %replace participating with engaging, as participating i
 in integration is by participating in efforts to
 develop software 
 infrastructure to manage their electricity requirements in a tightly coupled manner 
-with their ESPs, facilitating both energy efficiency and grid reliability. In addition, this will provide for extensive funding and cost analysis and help the community base future requirements for SCs and ESPs on facts and a proven set of measurements.
+with their ESPs, facilitating both energy efficiency and grid reliability. %In addition, 
+This will provide for extensive funding and cost analysis and help the community base future requirements for SCs and ESPs on facts and a proven set of measurements.
 
 Our analysis in this paper focuses %TP:not focused, but focuses. 
 on SCs in the United States. However, 
 the findings can be extended to and may relate to SCs in other countries with similar practices. 
-Electric grid infrastructure and market design are highly dependent on %on, not upon. TP.
+Electrical grid infrastructure and market design are highly dependent on %on, not upon. TP.
 governmental regulations that vary across geographies. We restricted the initial analysis to the understanding of 
 electricity markets in the United States. Future work can extend the analysis to the electricity markets in Europe and other geographies.
 
