--- a/text/whitepaper.tex
+++ b/text/whitepaper.tex
@@ -9,8 +9,8 @@
 \def\wl{\par \vspace{\baselineskip}}
 \begin{document}
 %
-\conferenceinfo{SC14}{'14 New Orleans, Louisiana USA}
-\CopyrightYear{2014}
+%\conferenceinfo{SC14}{'14 New Orleans, Louisiana USA}
+%\CopyrightYear{2014}
 
 \title{
 The Electrical Grid and Supercomputing Centers:\\
@@ -20,21 +20,21 @@ An Investigative Analysis of Emerging Opportunities and Challenges\thanks{This w
 %
 %\numberofauthors{16}
 %\author{Natalie Bates$^1$, Girish Ghatikar$^2$,
-  %Ghaleb Abdulla$^3$, Gregory A. Koenig$^4$, Sridutt Bhalachandra$^5$, \\
-	%Mehdi Sheikhalishahi$^6$, Tapasya Patki$^7$, Barry Rountree$^3$, Stephen Poole$^4$
-	%\\ \\
-	%$^1$Energy Efficient HPC Working Group\\
-       %$^2$Lawrence Berkeley National Laboratory\\
-       %$^3$Lawrence Livermore National Laboratory\\
-			 %$^4$Oak Ridge National Laboratory\\
-			 %$^5$University of North Carolina\\
-			%$^6$University of Calabria\\
-			%$^7$University of Arizona
-	%}
-%
+% Ghaleb Abdulla$^3$, Gregory A. Koenig$^4$, Sridutt Bhalachandra$^5$, \\
+%	Mehdi Sheikhalishahi$^6$, Tapasya Patki$^7$, Barry Rountree$^3$, Stephen Poole$^4$
+%	\\ \\
+%	$^1$Energy Efficient HPC Working Group\\
+%       $^2$Lawrence Berkeley National Laboratory\\
+%       $^3$Lawrence Livermore National Laboratory\\
+%			 $^4$Oak Ridge National Laboratory\\
+%			 $^5$University of North Carolina\\
+%			$^6$University of Calabria\\
+%			$^7$University of Arizona
+%	}
+
 %\additionalauthors {
 %\label{sec:additional}
- %\noindent
+%\noindent
 %Lou Ahlen, Purdue University \\
 %Anna Maria Bailey, LLNL\\
 %Susan Coghlan, Argonne NL\\
@@ -61,16 +61,16 @@ An Investigative Analysis of Emerging Opportunities and Challenges\thanks{This w
 \label{sec:intro}
 \input{intro}
 
-\section{Electricity Service Providers\\
- and HPC-Grid Integration}
+\section{Electricity Service Providers}
+ %and HPC-Grid Integration}
 \label{sec:ESPintegration}
 \input{ESPintegration}
 
-\section{Supercomputing Centers and \\ HPC-Grid Integration}
+\section{Supercomputing Centers} %and \\ HPC-Grid Integration}
 \label{sec:supercomputercenters}
 \input{supercomputercenters}
 
-\section{Questionnaire} 
+\section{Survey Results} %Questionnaire 
 \label{sec:questionnaire}
 \input{questionnaire}
 
