--- a/text/ESPintegration.tex
+++ b/text/ESPintegration.tex
@@ -1,32 +1,32 @@
-The EE HPC WG took as their starting point a
-model developed by LBNL's Demand Response Research
-Center. This model describes strategies that datacenters might employ for utility programs to manage their electricity and
-power requirements to lower costs and benefit from utility
-incentives. The EE HPC WG adopted this model %with slight tweaks  TP:This makes the model seem trivial, which it is not.
-to reflect the supercomputing environment
-focus (as opposed to %TP: Replace 'versus' with 'as opposed to'
-the datacenter focus described by LBNL`s Demand
-Response Research Center).
-%TP: Rephrasing the following sentence
-%For purposes of this paper, we define SCs 
-%as distinct from datacenters as having 
-%significantly higher system utilization and thus little or no 
-%virtualization.  
-
-It is important to highlight the differences between SCs and datacenters. Unlike datacenters, SCs are more performance oriented, have significantly higher system utilization, and use little or no virtualization. 
-Additionally, supercomputing
-applications are distinguished by their lack of geographical
-portability due to security concerns, data size and machine-specific
-optimizations.  
-
-We also note that SCs tend to be more
-energy efficient than datacenters. Power Usage Effectiveness (PUE) is a good measure for energy efficiency. PUE is the ratio of the total energy supplied for the facility to the amount of energy that actually reaches the IT infrastructure. A PUE of $1.0$ is ideal. In our survey, none of the SCs exceeded a Power Usage Effectiveness (PUE) of $1.53$, while the average PUE for a datacenter falls in the range of $1.91$ and $2.9$ ~\cite{Niccolai}.
-
-\subsection{Electricity Service Provider Methods and \\Programs}
-%TP: Change title slightly
+%The EE HPC WG took as their starting point a
+%model developed by LBNL's Demand Response Research
+%Center. This model describes strategies that datacenters might employ for utility programs to manage their electricity and
+%power requirements to lower costs and benefit from utility
+%incentives. The EE HPC WG adopted this model %with slight tweaks  TP:This makes the model seem trivial, which it is not.
+%to reflect the supercomputing environment
+%focus (as opposed to %TP: Replace 'versus' with 'as opposed to'
+%the datacenter focus described by LBNL`s Demand
+%Response Research Center).
+%%TP: Rephrasing the following sentence
+%%For purposes of this paper, we define SCs 
+%%as distinct from datacenters as having 
+%%significantly higher system utilization and thus little or no 
+%%virtualization.  
+%
+%It is important to highlight the differences between SCs and datacenters. Unlike datacenters, SCs are more performance oriented, have significantly higher system utilization, and use little or no virtualization. 
+%Additionally, supercomputing
+%applications are distinguished by their lack of geographical
+%portability due to security concerns, data size and machine-specific
+%optimizations.  
+%
+%We also note that SCs tend to be more
+%energy efficient than datacenters. Power Usage Effectiveness (PUE) is a good measure for energy efficiency. PUE is the ratio of the total energy supplied for the facility to the amount of energy that actually reaches the IT infrastructure. A PUE of $1.0$ is ideal. In our survey, none of the SCs exceeded a Power Usage Effectiveness (PUE) of $1.53$, while the average PUE for a datacenter falls in the range of $1.91$ and $2.9$ ~\cite{Niccolai}.
+%
+%\subsection{Electricity Service Provider Methods and \\Programs}
+%%TP: Change title slightly
 \label{sub:EPP}
 An ESP seeks to provide efficient and reliable generation, transmission, and 
-distribution of electricity. \emph{Methods} and \emph{programs} employed by ESPs and their consumers 
+distribution of electricity. \emph{Methods} and \emph{Programs} employed by ESPs and their consumers 
 are key to managing and balancing the supply and demand of electricity. While the \textit{methods} 
 describe how ESPs manage supply, the \textit{programs} describe the activities that 
 the ESPs can offer to their consumers in order to balance demand with supply.
@@ -44,7 +44,7 @@ during high demand periods (such as hot summer afternoons when air conditioners 
 
 The following is a list and brief definitions of key methods and programs.  
 
-\subsubsection{Methods}
+\subsection{Methods}
 \begin{itemize}
 \item Regulation (Up or Down): Methods used to maintain the portion of electricity generation reserves 
 that are needed to balance generation and demand at all times. Raising supply is \emph{up} regulation and lowering 
@@ -71,7 +71,7 @@ Pumped-storage hydroelectricity is the largest-capacity form of grid energy stor
 many renewable resources. 
 \end{itemize}
 
-\subsubsection{Programs}
+\subsection{Programs}
 \begin{itemize}
 \item Energy Efficiency:  Programs used to reduce overall electricity consumption.
 
