--- a/text/ESPintegration.tex
+++ b/text/ESPintegration.tex
@@ -46,41 +46,41 @@ The following is a list and brief definitions of key methods and programs.
 
 \subsection{Methods}
 \begin{itemize}
-\item Regulation (Up or Down): Methods used to maintain the portion of electricity generation reserves 
+\item {\bf Regulation (Up or Down):} Methods used to maintain the portion of electricity generation reserves 
 that are needed to balance generation and demand at all times. Raising supply is \emph{up} regulation and lowering 
 supply is \emph{down} regulation. There are many types of reserves (for example, operating reserves, ancillary services), distinguished by who manages them and what they are used for.
 
-\item Transmission Congestion: Methods used to resolve congestion that occurs when there is not enough 
+\item {\bf Transmission Congestion:} Methods used to resolve congestion that occurs when there is not enough 
 transmission capability to support all requests for transmission services. Transmission system operators 
 must re-dispatch generation or, 
 in the limit, deny some of these requests to prevent transmission lines from becoming overloaded.
 
-\item Distribution Congestion:  Methods used to resolve congestion that occurs when the 
+\item {\bf Distribution Congestion:}  Methods used to resolve congestion that occurs when the 
 distribution control system 
 is overloaded.  It generally results in deliveries that are held up or delayed.  
 
-\item Frequency response:  Methods used to keep grid frequency constant and in-balance. 
+\item {\bf Frequency response:}  Methods used to keep grid frequency constant and in-balance. 
 Generators are typically used for frequency response, but any appliance that operates to a duty cycle 
 (such as air conditioners and heat pumps) could be used to provide a 
 constant and reliable grid balancing service by timing their duty cycles in response to system load.   
 
-\item Grid Scale Storage:  Methods used to store electricity on a large scale. 
+\item {\bf Grid Scale Storage:}  Methods used to store electricity on a large scale. 
 Pumped-storage hydroelectricity is the largest-capacity form of grid energy storage. 
 
-\item Renewables:  Methods used to manage the variable uncertain generation nature of 
+\item {\bf Renewables:}  Methods used to manage the variable uncertain generation nature of 
 many renewable resources. 
 \end{itemize}
 
 \subsection{Programs}
 \begin{itemize}
-\item Energy Efficiency:  Programs used to reduce overall electricity consumption.
+\item {\bf Energy Efficiency:}  Programs used to reduce overall electricity consumption.
 
-\item Peak Shedding:  Programs used to reduce load during peak times, 
+\item {\bf Peak Shedding:}  Programs used to reduce load during peak times, 
 where the reduced load is not used at a later time. 
 
-\item Peak Shifting:  Programs where the load during peak times is moved to, typically, non-peak hours. 
+\item {\bf Peak Shifting:}  Programs where the load during peak times is moved to, typically, non-peak hours. 
 
-\item Dynamic Pricing:  Time varying pricing programs used to increase, shed,
+\item {\bf Dynamic Pricing:}  Time varying pricing programs used to increase, shed,
  or shift electricity consumption. 
 The two types of pricing are peak and real-time.  Peak pricing is pre-scheduled; however, the consumer 
 does not know if a certain day will be a peak or a non-peak day until day-ahead or day-of.  
