More minor changes

--- a/bib/whitepaper.bib
+++ b/bib/whitepaper.bib
@@ -57,8 +57,7 @@ multiple vendors, and provides additional features that support future services.
 	publisher = {{ACM}},
 	author = {Yang, Xu and Zhou, Zhou and Wallace, Sean and Lan, Zhiling and Tang, Wei and Coghlan, Susan and Papka, Michael E.},
 	year = {2013},
-	keywords = {electricity bill, job scheduling, power, system utilization},
-	pages = {60:1–60:11}
+	keywords = {electricity bill, job scheduling, power, system utilization}
 }
 
 @inproceedings{bertran_accurate_2010,
@@ -911,8 +910,7 @@ The bus-level control improves power and voltage ramping rates, reduces wind pow
 	author = {Mu'alem, Ahuva W. and Feitelson, Dror G.},
 	month = jun,
 	year = {2001},
-	keywords = {Parallel job scheduling, backfilling, performance metrics., runtime estimates, workload modeling},
-	pages = {529–543}
+	keywords = {Parallel job scheduling, backfilling, performance metrics., runtime estimates, workload modeling}
 },
 
 @inproceedings{lifka_anl/ibm_1995,
