--- a/text/intro.tex
+++ b/text/intro.tex
@@ -1,3 +1,4 @@
+
 Supercomputing centers (SCs) with petascale\footnote{Petascale computing refers to computing systems capable of at
 least \(10^{15}\) operations or floating point instructions per second (FLOPS).} 
 systems for high-performance computing (HPC) can have an outsized 
@@ -33,7 +34,7 @@ flexibility in reducing power during periods of high consumption.
 A mutual understanding of concerns between SCs and ESPs can 
 produce a symbiotic relationship that goes beyond the current producer-consumer 
 paradigm, paving the way for possible integration of %HPC TP: replace HPC with SCs
-SCs with the electrical grid. HPC-Grid Integration in the context of this study refers to the dynamic interaction and value between the demand-side resources (SCs) and the supply-side resources (ESPs) as well as the relationship between the electricity grid and its markets.
+SCs with the grid. HPC-Grid Integration in the context of this study refers to the dynamic interaction and value between the demand-side resources (SCs) and the supply-side resources (ESPs) as well as the relationship between the electricity grid and its markets.
 
 The Energy Efficient HPC Working Group (\href {http://eehpcwg.lbl.gov/}{EE HPC WG}) 
 investigates opportunities for large supercomputing sites to 
