--- a/text/priorwork.tex
+++ b/text/priorwork.tex
@@ -164,4 +164,5 @@ Chen et al.~\cite{chen2014aspdac} studied the potential of datacenter participat
 
 Liu et al.~\cite{liu2012renewable} introduced a way to reduce cost and environmental impacts using a holistic approach that integrates energy and cooling supply control with IT workload planning to improve the overall attainability of datacenter operations. The results demonstrated a reduction of the recurring power costs and the use of non-renewable energy by as much as 60\% compared to existing techniques, while still meeting Service Level Agreements.
 
-Aikema et al.~\cite{aikema2012data} also analyzed a number of different potential advanced power markets for datacenters to participate in, and showed energy cost reduction by up to 12\% with only a small impact on the quality of service provided to users. Ghamkhari et al.~\cite{ghamkhari2012data} built an analytical profit model to show that datacenters can noticeably increase their profit by participating in voluntary load reduction to offer ancillary services, and help the grid achieve better service quality and reliability. 
+Aikema et al.~\cite{aikema2012data} also analyzed a number of different potential advanced power markets for datacenters to participate in, and showed energy cost reduction by up to 12\% with only a small impact on the quality of service provided to users. Ghamkhari et al.~\cite{ghamkhari2012data} built an analytical profit model to show that datacenters can noticeably increase their profit by participating in voluntary load reduction to offer ancillary services, and help the grid achieve better service quality and reliability. \\ \\ 
+ 
