More minor edits

--- a/text/ESPintegration.tex
+++ b/text/ESPintegration.tex
@@ -27,8 +27,8 @@
 \label{sub:EPP}
 An ESP seeks to provide efficient and reliable generation, transmission, and 
 distribution of electricity. \emph{Methods} and \emph{Programs} employed by ESPs and their consumers 
-are key to managing and balancing the supply and demand of electricity. While the \textit{methods} 
-describe how ESPs manage supply, the \textit{programs} describe the activities that 
+are key to managing and balancing the supply and demand of electricity. The \textit{methods} 
+describe how ESPs manage supply, and the \textit{programs} describe the activities that 
 the ESPs can offer to their consumers in order to balance demand with supply.
 
 Although critical to ESPs, methods are generally not visible to the consumer of the electricity because they
