--- a/text/abstract.tex
+++ b/text/abstract.tex
@@ -1,6 +1,6 @@
 Some of the largest Supercomputing Centers (SCs) in the United States are developing new relationships with their Electricity Service Providers (ESPs). These relationships, similar to other commercial and industrial partnerships, are driven by mutual interest to reduce energy costs and improve electrical grid reliability. While SCs are concerned about electricity quality, cost, environmental impact and availability, ESPs are concerned about electrical grid reliability, particularly in terms of energy consumption, peak power demands and power fluctuations. The power demand for SCs can be 20 MW or more---the theoretical peak power requirements are greater than 45 MW---and recurring intra-hour variability can exceed 8 MW. As a result of this, ESPs may request large SCs to engage in demand response and grid integration. 
 
-This paper evaluates today's relationships, potential partnerships and possible integration between SCs and their ESPs. The paper uses feedback from a questionnaire submitted to supercomputer centers on the Top100 List in the United States to describe opportunities for overcoming the challenges to HPC-Grid integration. \\ 
+This paper evaluates today's relationships, potential partnerships and possible integration between SCs and their ESPs. The paper uses feedback from a questionnaire submitted to supercomputing centers on the Top100 List in the United States to describe opportunities for overcoming the challenges to HPC-Grid integration. \\ 
 
 %Some of the largest Supercomputing Centers (SCs) in the United States are developing 
 %new relationships with their Electricity Service Providers (ESPs). 
