--- a/text/intro.tex
+++ b/text/intro.tex
@@ -1,7 +1,7 @@
 
 Supercomputing centers (SCs) with petascale\footnote{Petascale computing refers to computing systems capable of at
 least \(10^{15}\) operations or floating point instructions per second (FLOPS).} 
-systems for high-performance computing (HPC) can have an outsized 
+systems for High-Performance Computing (HPC) can have an outsized 
 impact on their Electricity Service Providers (ESPs), with peak 
 power demands %replace 'in excess of' with exceeding
 exceeding 20 MW and instantaneous power fluctuations of up to 8 MW. 
@@ -95,11 +95,11 @@ electricity markets in the United States. Future work can extend the analysis to
 The paper is organized as follows.
 Sections~\ref{sec:ESPintegration} and~\ref{sec:supercomputercenters} of this paper
 describe in greater detail the model for 
-integrating SCs and the electrical grid.
+integrating the electrical grid and SCs.
 Section~\ref{sub:priorwork}
 reviews prior work in SC strategies. %TP: HPC replaced with supercomputing
 Section~\ref{sec:questionnaire} provides the results of the questionnaire. 
 Section~\ref{sec:opportunities} 
 discusses the several opportunities, solutions and barriers that have been highlighted
 by the survey results. We offer our conclusions in Section~\ref{sec:conclusion} along with our plan for future work. %Additional authors are listed in Section~\ref{sec:additional} and the
-Section \nameref{Appendix} summarizes the survey questions.
+The \nameref{Appendix} summarizes survey questions.
