--- a/text/supercomputercenters.tex
+++ b/text/supercomputercenters.tex
@@ -9,7 +9,7 @@ DOE exascale machine should not exceed 20 MW; effectively a $1000x$ performance 
 with only a $3x$ increase in power. 
 
 However, the problem is not as simple as provisioning 20 MW. Ultimately, SCs optimize for
-performance per dollar, not performance per Watt, and flexibility in power consumption
+performance per dollar, not performance per watt, and flexibility in power consumption
 can be expected to result in lower overall prices. Use of green technologies such as
 wind and solar energy may also lead to cheaper but less predictable sources of power.
 In addition, as described in Section~\ref{sec:ESPintegration}, ESPs may request a change in timing and/or magnitude of demand by SCs. To adapt to this new landscape, SCs may employ one or more strategies to control their electricity demand. 
@@ -21,7 +21,7 @@ power requirements to lower costs and benefit from utility
 incentives. The EE HPC WG adopted this model %with slight tweaks  TP:This makes the model seem trivial, which it is not.
 to reflect the supercomputing environment
 focus (as opposed to %TP: Replace 'versus' with 'as opposed to'
-the datacenter focus described by LBNL`s Demand
+the datacenter focus described by LBNL's Demand
 Response Research Center).
 %TP: Rephrasing the following sentence
 %For purposes of this paper, we define SCs 
